# 2048

./: CMakeLists.txt  main.cpp
CmakeScripts/: automate-vcpkg.cmake
Includes/: Board.hpp  BoardSquare.hpp  GameObject.hpp  InputHandler.hpp  Tile.hpp
Sources/: Board.cpp  BoardSquare.cpp  GameObject.cpp  InputHandler.cpp  Tile.cpp
